added new pages
created week 11 for 391 with new content

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,6 +1,6 @@
-title: Creative Coding 2, MART 220
-title-short: Creative Coding 2
-description: A foundation .
+title: Mobile Gaming, MART 391
+title-short: Mobile Gaming
+description: A mobile gaming course.
 institution: University of Montana, School of Media Arts
 institution-short: Media Arts | Montana
 
